@@ -15,6 +15,10 @@
    - jmc@cvs.openbsd.org 2013/10/20 18:00:13
      [ssh_config.5]
      tweak the "exec" description, as worded by djm;
+   - djm@cvs.openbsd.org 2013/10/23 03:03:07
+     [readconf.c]
+     Hostname may have %h sequences that should be expanded prior to Match
+     evaluation; spotted by Iain Morgan
 
 20131018
  - (djm) OpenBSD CVS Sync
